[package]
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2021"
name = "receipts"
version = "0.1.0"

[dependencies]
lazy_static = "1.4"
primitive-types = "0.12"
rand = "0.8"
secp256k1 = { version = "0.29", features = ["recovery"] }
tiny-keccak = { version = "2", features = ["keccak"] }
itertools = "0.12"

[dev-dependencies]
rustc-hex = "2"
